# sector-ai

./: README.md  __main__.py  admin.py  autoreply.py  characterize.py  chat.py  coding.py  decision.py  default_config.json  emoji.py  pyproject.toml  requirements.txt  sector_context.py  streaming_handler.py  summarize.py  topic.py  vision.py
src/sector_ai/: __main__.py  admin.py  characterize.py  chat.py  coding.py  emoji.py  poll.py  sector_context.py  streaming_handler.py  summarize.py  tokens.py
