[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sector-ai"
version = "1.1.1"
description = "Python Telegram Bot powered by LangChain and Ollama"
authors = [
    { name = "Rory Eckel" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "langchain==0.3.24",
    "langchain-ollama==0.3.2",
    "python-telegram-bot==22.0",
    "svglib==1.5.1",
    "reportlab==4.4.0",
    "pydantic==2.11.3",
    "requests==2.32.3"
]

[project.urls]
Homepage = "https://github.com/roryeckel/sector-ai"
Issues = "https://github.com/roryeckel/sector-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]
